--- a/src/entities/ProfilePreview/ProfilePreview.scss
+++ b/src/entities/ProfilePreview/ProfilePreview.scss
@@ -6,6 +6,11 @@
 
     .profile__avatar {
         width: calc(30% - 10px);
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .profile__info {
