--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,3 +1,10 @@
-.main {
-    
+body {
+    background-color: rgba(200, 200, 200, 0.45);
+
+    #root {
+
+        .main {
+            
+        }
+    }
 }
