--- a/src/widgets/Navigation/Navigation.scss
+++ b/src/widgets/Navigation/Navigation.scss
@@ -1,6 +1,11 @@
 .home__navigation {
     display: flex;
     flex-direction: column;
-
-    
+    margin: 0;
+    padding: 15px 0;
+    padding-left: 10px;
+    border-radius: 15px;
+    background-color: #fff;
+    list-style: none;
+    gap: 15px;
 }
