--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,10 +1,10 @@
 body {
     background-color: rgba(200, 200, 200, 0.45);
-
+    height: 100svh;
+    width: 100%;
+    margin: 0;
+    
     #root {
-
-        .main {
-            
-        }
+        height: 100%;
     }
 }
